--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\""
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -26,6 +27,7 @@
     "react-query": "^3.39.2",
     "styled-components": "^5.3.5",
     "superjson": "^1.9.1",
+    "ts-node": "^10.9.1",
     "zod": "^3.17.3"
   },
   "devDependencies": {
