--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
     "@types/styled-components": "^5.1.25",
+    "dayjs": "^1.11.4",
     "eslint-plugin-prettier": "^4.2.1",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
