--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
     "@trpc/server": "^9.26.2",
+    "@types/google-map-react": "^2.1.7",
     "@types/styled-components": "^5.1.25",
     "dayjs": "^1.11.4",
     "eslint-plugin-prettier": "^4.2.1",
+    "google-map-react": "^2.2.0",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
     "prettier": "^2.7.1",
