--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\""
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.7",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.1",
     "@trpc/client": "^9.26.2",
@@ -24,9 +25,11 @@
     "google-map-react": "^2.2.0",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
+    "postmark": "^3.0.12",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "react-toastify": "^9.0.8",
