--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "react-toastify": "^9.0.8",
+    "safe-json-stringify": "^1.2.0",
     "styled-components": "^5.3.5",
     "superjson": "^1.9.1",
     "ts-node": "^10.9.1",
@@ -42,6 +43,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/safe-json-stringify": "^1.1.2",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.3",
     "prisma": "^4.1.1",
