--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.4",
     "eslint-plugin-prettier": "^4.2.1",
     "google-map-react": "^2.2.0",
+    "jotai": "^1.7.8",
     "next": "12.2.3",
     "next-auth": "^4.10.3",
     "postmark": "^3.0.12",
